feat(deploy): add dockerizacao da api
